# Z-Engine

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  compile.sh  opencode.json
core/: CMakeLists.txt
core/examples/: main.cpp
core/include/core/: tick_timer.hpp
core/include/zen/core/: i_register.hpp  timer.hpp  uuid.hpp
core/src/: tick_timer.cpp  timer.cpp  uuid.cpp
core/tests/: main.cpp
docs/: architecture.md  dependency-graph.md
examples/: CMakeLists.txt
modules/: CMakeLists.txt
modules/audio/include/zen/audio/: audio.hpp  audio_clip.hpp  audio_engine.hpp  audio_stream.hpp  audio_types.hpp
modules/audio/src/internal/: audio.hpp  audio_device.hpp  audio_stream_register.hpp  i_audio_backend.hpp
modules/graphics/: CMakeLists.txt
modules/graphics/examples/: CMakeLists.txt
modules/graphics/examples/apps/00_clear/: clear.cpp  clear.hpp
modules/graphics/examples/apps/01_triangle/: triangle.cpp  triangle.hpp
modules/graphics/examples/apps/01_triangle/shaders/: triangle.frag  triangle.vert
modules/graphics/examples/apps/02_cube/: cube.cpp  cube.hpp
modules/graphics/examples/apps/02_cube/shaders/: cube.frag  cube.vert
modules/graphics/examples/apps/03_texture/: texture.cpp  texture.hpp
modules/graphics/examples/apps/03_texture/shaders/: texture.frag
modules/graphics/examples/apps/04_framebuffer/: framebuffer.cpp  framebuffer.hpp
modules/graphics/examples/apps/04_framebuffer/shaders/: position.frag
modules/graphics/examples/apps/05_multithreaded/: multithreaded.cpp  multithreaded.hpp
modules/graphics/examples/apps/05_multithreaded/shaders/: framebuffer.vert  texture.frag
modules/graphics/examples/shared/assets/shaders/: colour.frag  colour.vert  simple.frag  simple.vert  texture.frag  texture.vert
modules/graphics/examples/shared/common/: app.cpp  app.hpp  driver.cpp  driver.hpp  util.cpp  util.hpp
modules/graphics/examples/src/: main.cpp
modules/graphics/examples/test/: test.cpp
modules/graphics/include/vgl/: defines.hpp  encoder.hpp  g_structs.hpp  vgl.hpp
modules/graphics/src/: command_buffer.cpp  context.cpp  encoder_impl.cpp  g_structs.cpp  vgl.cpp
modules/graphics/src/internal/: command_buffer.hpp  context.hpp  encoder_impl.hpp  i_renderer_context.hpp  pipeline_structs.hpp
modules/graphics/src/internal/gl/: gl_renderer_context.cpp  gl_renderer_context.hpp
modules/graphics/src/internal/noop/: noop_renderer_context.cpp  noop_renderer_context.hpp
